--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tracker calculating BMI and other fitness records for individual persons",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
